--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,76 +1,111 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+/* Fonts */
+@font-face {
+  font-family: "Nunito";
+  src: url(/fonts/nunito.ttf);
+  font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@font-face {
+  font-family: "Nunito";
+  src: url(/fonts/nunito-italic.ttf);
+  font-style: italic;
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+:root {
+  /* Color Palettes */
+  --red-0: #fff0ed;
+  --red-1: #facac8;
+  --red-2: #f5a4a2;
+  --red-3: #f07d7d;
+  --red-4: #eb5757;
+  --red-5: #d14b4c;
+  --red-6: #b83e42;
+  --red-7: #9e3237;
+  --red-8: #84252d;
+  --red-9: #6a1922;
+  --red-10: #510c18;
+  --red-11: #37000d;
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+  --orange-0: #fff2de;
+  --orange-1: #fbdbb8;
+  --orange-2: #f8c593;
+  --orange-3: #f4ae6d;
+  --orange-4: #dc9a5f;
+  --orange-5: #c38552;
+  --orange-6: #ab7144;
+  --orange-7: #935d37;
+  --orange-8: #7a4829;
+  --orange-9: #62341b;
+  --orange-10: #491f0e;
+  --orange-11: #310b00;
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+  --yellow-0: #fff4cb;
+  --yellow-1: #fddf9b;
+  --yellow-2: #faca6b;
+  --yellow-3: #e3b55f;
+  --yellow-4: #cba053;
+  --yellow-5: #b48c47;
+  --yellow-6: #9d773b;
+  --yellow-7: #856230;
+  --yellow-8: #6e4d24;
+  --yellow-9: #573918;
+  --yellow-10: #3f240c;
+  --yellow-11: #280f00;
+
+  --green-0: #cdffe5;
+  --green-1: #a1eec2;
+  --green-2: #75dc9e;
+  --green-3: #68c78d;
+  --green-4: #5bb27c;
+  --green-5: #4e9c6b;
+  --green-6: #41875a;
+  --green-7: #347248;
+  --green-8: #275d37;
+  --green-9: #1a4726;
+  --green-10: #0d3215;
+  --green-11: #001d04;
+
+  --blue-0: #f0f3ff;
+  --blue-1: #c0d6fb;
+  --blue-2: #90baf6;
+  --blue-3: #5f9df2;
+  --blue-4: #2f80ed;
+  --blue-5: #2871d1;
+  --blue-6: #2263b4;
+  --blue-7: #1b5498;
+  --blue-8: #14467b;
+  --blue-9: #0d375f;
+  --blue-10: #072942;
+  --blue-11: #001a26;
+
+  --purple-0: #f8f0ff;
+  --purple-1: #e5d3f8;
+  --purple-2: #d1b7f2;
+  --purple-3: #be9aeb;
+  --purple-4: #aa7de4;
+  --purple-5: #956bd0;
+  --purple-6: #8059bb;
+  --purple-7: #6b47a7;
+  --purple-8: #553693;
+  --purple-9: #40247f;
+  --purple-10: #2b126a;
+  --purple-11: #160056;
+
+  --grayscale-0: #f0f3f4;
+  --grayscale-1: #cfd4d6;
+  --grayscale-2: #adb5b8;
+  --grayscale-3: #8c979a;
+  --grayscale-4: #6a787c;
+  --grayscale-5: #49595e;
+  --grayscale-6: #273a40;
+  --grayscale-7: #213439;
+  --grayscale-8: #1b2d32;
+  --grayscale-9: #16272c;
+  --grayscale-10: #102025;
+  --grayscale-11: #0a1a1e;
+
+  --main-font: "Nunito", sans-serif;
+  --default-text-color: var(--grayscale-7);
 }
 
 * {
@@ -83,16 +118,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: "Nunito", sans-serif;
+  color: var(--default-text-color);
 }
 
 a {
@@ -100,8 +127,153 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.header {
+  height: 10vh;
+  padding: 0 2vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: stretch;
+}
+
+.logo {
+  transition: all 0.3s ease-in-out;
+}
+
+.controls {
+  height: 4vh;
+  padding: 0 2vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: stretch;
+}
+
+.seed-colors {
+  display: flex;
+  flex-direction: row;
+}
+
+.seed {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 1rem;
+  border: none;
+  border-radius: 1.25rem;
+}
+
+.seed--selected {
+  border: var(--grayscale-1) solid 1px;
+}
+
+.seed__label {
+  padding: 0 1rem 0 0.75rem;
+}
+
+.seed__drop {
+  display: block;
+  height: 2.5rem;
+  width: 2.5rem;
+  border-radius: 1.25rem;
+  border: none;
+}
+
+.seed__add-button {
+  border: var(--grayscale-1) solid 1px;
+  border-radius: 50%;
+  background: none;
+  box-sizing: border-box;
+  padding: none;
+  width: 2.5rem;
+  height: 2.5rem;
+  margin-right: 1.5rem;
+}
+
+.seed__add-button svg {
+  display: inline-block;
+  width: calc(2.5rem - 2px);
+  height: calc(2.5rem - 2px);
+}
+
+.swatches {
+  height: 86vh;
+  background: linear-gradient(
+    to bottom,
+    white 0%,
+    white 50%,
+    black 50%,
+    black 100%
+  );
+  padding: 3vw 0.75vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: stretch;
+}
+
+.swatch {
+  position: relative;
+  flex: 1;
+  justify-self: stretch;
+  height: 100%;
+}
+
+.swatch__body {
+  position: absolute;
+  top: 0;
+  left: 0.75vw;
+  right: 0.75vw;
+  bottom: 0;
+  border-radius: 3.354vw;
+  /* padding: 2vw 0.75vw; moved padding to component */
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  cursor: pointer;
+  transition: all ease-in-out 0.1s;
+}
+
+.swatch__body:hover {
+  margin-top: -1vw;
+  margin-bottom: -1vw;
+}
+
+.swatch__white-contrast {
+  color: white;
+  transition: all ease-in-out 0.1s;
+}
+
+.swatch__black-contrast {
+  color: black;
+}
+
+.swatch__contrast-text {
+  font-size: 0.75rem;
+  line-height: 1;
+}
+
+.swatch__contrast-value {
+  font-size: 1.25rem;
+  background: black;
+  border-radius: 0.5rem;
+  margin: 0.5rem 0;
+}
+
+.swatch__label {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.swatch__index {
+  font-size: 2.5rem;
+  line-height: 1;
+}
+
+.swatch__hex {
+  font-size: 0.75rem;
+  line-height: 1;
 }
