--- a/styles/globals.css
+++ b/styles/globals.css
@@ -287,7 +287,7 @@ a {
 .seed-colors {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .seed-colors__list {
@@ -633,7 +633,7 @@ a {
   display: flex;
   flex-direction: column;
   text-align: center;
-  justify-content: start;
+  justify-content: flex-start;
   margin-bottom: 1rem;
 }
 
@@ -658,7 +658,7 @@ a {
   }
   .controls {
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     height: 10vh;
   }
 
@@ -671,7 +671,9 @@ a {
 
   .palette-actions {
     height: 4vh;
+    align-self: stretch;
     align-items: center;
+    justify-content: space-between;
     flex: auto;
   }
 
@@ -693,7 +695,7 @@ a {
 
   .swatches__header {
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     padding-bottom: 1rem;
   }
 
