--- a/styles/globals.css
+++ b/styles/globals.css
@@ -130,10 +130,19 @@
 
 html,
 body {
-  max-width: 100vw;
   overflow-x: hidden;
   font-family: "Nunito", sans-serif;
   color: var(--default-text-color);
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 a {
@@ -399,18 +408,6 @@ a {
   font-size: 1rem;
 }
 
-/* .seed__add-button {
-  border: none;
-  background: none;
-  margin-right: 1.5rem;
-}
-
-.seed__add-button svg {
-  display: inline-block;
-  width: calc(2.5rem - 2px);
-  height: calc(2.5rem - 2px);
-} */
-
 .side-controls__wrapper {
   display: flex;
   flex-direction: row;
@@ -546,6 +543,7 @@ a {
 }
 
 .swatches__area {
+  flex: 1;
   background-color: white;
   background-image: linear-gradient(
     to bottom,
@@ -557,7 +555,6 @@ a {
   background-position: bottom left;
   border-top: var(--grayscale-0) solid 1px;
   transition: all ease-in-out 0.2s;
-  height: 86vh;
   padding: 4vw 3.5vw;
 }
 
@@ -653,27 +650,6 @@ a {
   aspect-ratio: 1;
 }
 
-/* .swatch__white-contrast {
-  color: white;
-  transition: all ease-in-out 0.1s;
-}
-
-.swatch__black-contrast {
-  color: black;
-}
-
-.swatch__contrast-text {
-  font-size: 0.75rem;
-  line-height: 1;
-}
-
-.swatch__contrast-value {
-  font-size: 1.25rem;
-  background: black;
-  border-radius: 0.5rem;
-  margin: 0.5rem 0;
-} */
-
 .swatch__label {
   /* flex: 1; */
   display: flex;
@@ -684,7 +660,6 @@ a {
 }
 
 .swatch__index {
-  /* font-family: var(--serif-font); */
   font-size: 1.5rem;
   font-weight: 100;
   line-height: 1.5;
@@ -701,17 +676,6 @@ a {
   html,
   body {
     font-size: 12px;
-    height: 100%;
-  }
-
-  div#__next {
-    height: 100%;
-  }
-
-  main {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
   }
 
   .controls {
